@@ -14,3 +14,5 @@ region_constraint = 78.0 31.5,89.5 31.5,89.5 25.5,78 25.5
 export_dir = /tmp/
 
 poes_disagg = 0.1
+
+quantile_loss_curves = 0.15, 0.85
